# daops

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  app-package.cwl  cli.py  eg-cli-params.yml  environment-docs.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  roocs.ini.tmpl  setup-env.sh  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
binder/: apt.txt
daops/: __init__.py  cli.py  config.py  options.py  processor.py  root-ca.pem
daops/catalog/: __init__.py  base.py  db.py  intake.py  util.py
daops/data_utils/: __init__.py  array_utils.py  attr_utils.py  common_utils.py  coord_utils.py  fix_utils.py  var_utils.py
daops/etc/: roocs.ini
daops/fix_utils/: decadal_utils.py
daops/ops/: average.py  base.py  regrid.py  subset.py
daops/utils/: __init__.py  base_lookup.py  consolidate.py  core.py  fixer.py  misc.py  normalise.py
docs/: Makefile  api.rst  conf.py  environment.yml  index.rst  installation.rst  make.bat  usage.rst
fixes/: cmip5.output1.INM.inmcm4.rcp45.mon.ocean.Omon.r1i1p1.latest.zostoga.json  cmip5.output1.MOHC.HadGEM2-ES.historical.mon.land.Lmon.r1i1p1.latest.rh.json  cmip5.output1.MOHC.HadGEM2-ES.rcp85.mon.atmos.Amon.r1i1p1.latest.tas.json
notebooks/: output_001.nc  subset.ipynb
notebooks/badc/cmip5/data/cmip5/output1/INM/inmcm4/rcp45/mon/ocean/Omon/r1i1p1/latest/zostoga/: zostoga_Omon_inmcm4_rcp45_r1i1p1_200601-210012.nc
outputs/: output.nc
src/daops/: __init__.py  cli.py  processor.py
src/daops/catalog/: __init__.py  base.py  intake.py  util.py
src/daops/data_utils/: __init__.py  attr_utils.py  common_utils.py  coord_utils.py  var_utils.py
src/daops/etc/: roocs.ini
src/daops/fix_utils/: decadal_utils.py
src/daops/ops/: __init__.py  average.py  base.py  regrid.py  subset.py
src/daops/utils/: __init__.py  base_lookup.py  common.py  consolidate.py  core.py  fixer.py  normalise.py  testing.py
tests/: _common.py  _test_data_pools_example.py  conftest.py  test_cli.py  test_daops.py  test_daops_subset.py  test_data_pools.py  test_fixes_applied.py  test_func_chainer.py  test_logging.py
tests/catalog/: test_db.py
tests/data_pools_checks/: .gitignore  README.md  caching.py  examples_data.py  merge_csv.py  results_db.py  run_data_pools_checks.py  test_results_db.py
tests/dummy_data_utils/: post_processors.py  pre_processors.py
tests/test_catalog/: test_intake.py  test_util.py
tests/test_core/: test_open_dataset.py
tests/test_data_utils/: test_array_utils.py  test_attr_utils.py  test_coord_utils.py  test_var_utils.py
tests/test_operations/: test_average.py  test_regrid.py  test_subset.py
tests/test_utils/: test_base_lookup.py  test_consolidate.py  test_core.py  test_normalise.py
tests/test_xarray/: test_xarray_aggregation.py
